# calificacion_compi2_dic_2024

./: .editorconfig
fase1/: calificacion.txt  json.pegjs  test01.txt  test02.txt
fase2/: avanzado.pegjs  basico.pegjs  input-avanzado.txt  input-basico.txt  input-intermedio.txt  intermedio.pegjs  output-avanzado.txt  output-basico.txt  output-intermedio.txt
fase3/: README.md
fase3/archivo-avanzado/: grammar-no-paren.pegf90  grammar.pegf90  meson.build
fase3/archivo-avanzado/src/: .gitignore
fase3/archivo-avanzado/test/: calculator_suite.f90  main.f90
fase3/archivo-avanzado/test/inputs/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
fase3/archivo-basico/: grammar.pegf90  meson.build
fase3/archivo-basico/test/: main.f90  sandwiches_suite.f90
fase3/archivo-basico/test/inputs/: blt.txt  desconocido.txt  pollo.txt  shuco.txt
fase3/prueba-acciones/: grammar.pegf90  meson.build
fase3/prueba-acciones/subprojects/: test-drive.wrap
fase3/prueba-acciones/test/: actions_suite.f90  main.f90
fase3/prueba-acciones/test/inputs/: asersion_accion.txt  asersion_negativa_accion.txt  conteo_delimitador_accion.txt  min_max_delimitador_accion.txt
fase3/prueba-expresiones/: grammar.pegf90  meson.build
fase3/prueba-expresiones/test/: expressions_suite.f90  main.f90
fase3/prueba-expresiones/test/inputs/: asersion.txt  conteo_delimitador.txt  min_max_delimitador.txt  pluck.txt
